--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
+    "loopback-component-storage": "^3.5.0",
+    "loopback-connector-mongodb": "^3.9.2",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
-    "nsp": "^2.1.0"
+    "nsp": "^2.1.0",
+    "vue-cli-plugin-vuetify": "^0.4.6"
   },
   "repository": {
     "type": "",
